--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,15 +11,19 @@
         android:label="@string/app_name" >
         <activity 
             android:name=".HomeActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".Forza4Activity"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity 
+            android:name=".Login"
+            android:theme="@android:style/Theme.Dialog">
         </activity>
     </application>
 
